--- a/frontend/style.css
+++ b/frontend/style.css
@@ -15,17 +15,21 @@ body{
 
 /* edit nav bar */
 .container{
-    float: right;
+    float: center;
     padding: 10px 10%;
-    padding-top: 30px;
+    padding-top: 40px;
+    text-align: center;
 }
 
 /* edit header (logo and navigation bar) */
 nav{
-    display: flex; 
+    display: in-line block; 
+    text-align: center;
     align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
+    width: 100%;
+    height: 100%;
 }
 
 nav ul li{
@@ -60,7 +64,7 @@ nav ul li a:hover::after{
     font-size: 30px;
     color: #000000;
     justify-content: center;
-    padding: 150px;
+    padding: 45px;
     text-align: center;
 }
 .home-text h1{
@@ -85,7 +89,7 @@ nav ul li a:hover::after{
     font-size: 18px;
     color: #E29492;
     justify-content: center;
-    padding-top: 125px;
+    padding-top: 45px;
     padding-bottom: 35px;
     text-align: center;
 }
