--- a/style.css
+++ b/style.css
@@ -8,14 +8,14 @@ html{
     scroll-behavior: smooth;
 }
 body{
-    background: #FAF1DE;
-    color: #000000;
+    background: #f8f8f8;
+    color: #000100;
 }
 /************** HOME **************/
 
 /* edit nav bar */
 .container{
-    float: center;
+    float: 0 auto;
     padding: 10px 10%;
     padding-top: 40px;
     text-align: center;
@@ -23,10 +23,9 @@ body{
 
 /* edit header (logo and navigation bar) */
 nav{
-    display: in-line block; 
-    text-align: center;
+    display: flex; 
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     flex-wrap: wrap;
     width: 100%;
     height: 100%;
@@ -39,7 +38,7 @@ nav ul li{
 }
 nav ul li a{
     text-decoration: none;
-    color: #000000;
+    color: #000100;
     font-size: 18px; 
     position: relative;
 }
@@ -49,7 +48,7 @@ nav ul li a::after{
     content: '';
     width: 0;
     height: 3px; 
-    background: #E29492;
+    background: #b4d2e7;
     position: absolute;
     left: 0;
     bottom: -6px;
@@ -62,7 +61,7 @@ nav ul li a:hover::after{
 /* edit home text */
 .home-text{
     font-size: 30px;
-    color: #000000;
+    color: #000100;
     justify-content: center;
     padding: 45px;
     text-align: center;
@@ -76,7 +75,7 @@ nav ul li a:hover::after{
 }
 .home-text h2{
     font-size: 40px;
-    color: #E29492;
+    color: #94c5cc;
     font-weight: 100; 
     margin-top: 18px; 
     margin-bottom: 15px; 
@@ -91,7 +90,7 @@ nav ul li a:hover::after{
     margin-right: auto;
     margin-top: 20px;
     margin-bottom: 40px;
-    background-color: #f7f7f7;
+    background-color: #b4d2e7;
     width: 800px;
     padding-bottom: 10px;
     border-radius: 20px;
@@ -103,7 +102,7 @@ nav ul li a:hover::after{
 .sub-title{
     font-size: 35px;
     font-weight: 600;
-    color: #000000;
+    color: #000100;
     text-align: center;
 }
 .about-description{
@@ -111,11 +110,16 @@ nav ul li a:hover::after{
     text-align: left;
 }
 
-/************** UNBIASED **************/
+ul{
+    font-size: 14px;
+    text-align: left;
+}
+
+/************** USER INPUT **************/
 /* title for unbiased */
 .unbiased-text{
     font-size: 18px;
-    color: #E29492;
+    color: #94c5cc;
     justify-content: center;
     padding-top: 45px;
     padding-bottom: 35px;
@@ -126,18 +130,24 @@ nav ul li a:hover::after{
 #question{
     margin-left: auto;
     margin-right: auto;
-    background-color: #f7f7f7;
+    background-color: #b4d2e7;
     width: 800px;
     padding: 30px;
     border-radius: 20px;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
 }
 .qContainer{
-    justify-content: center;
     text-align: center;
+    justify-content: center;
 }
 .qContainer h2{
+    text-align: center;
     padding-top: 15px;
+}
+
+.qContainer form{
+    display: inline-block; /* Adjusted to inline-block */
+    align-content: center;
 }
 
 
@@ -154,23 +164,23 @@ button-solid:focus {
 .button-solid{
     padding: 14px 60px;
     font-size: 15px;
-    color: #FFFFFF;
+    color: #f8f8f8;
     margin-top: 25px;
     cursor: pointer;
     display: inline-block;
-    background: #E29492;
+    background: #94c5cc;
     border-radius: 15px;
     transition: transform 0.5s;
 }
 .button-solid:hover{
-    background: #00008B;
+    background: #a1a6b4;
     transform: translateY(-5px);
 }
 
 /* probability result */
 .probability-result {
     font-size: 18px;
-    color: #E29492;
+    color: #000100;
     justify-content: center;
     padding-top: 25px;
     padding-bottom: 50px;
