--- a/style.css
+++ b/style.css
@@ -168,21 +168,24 @@ button-solid:focus {
     margin-top: 25px;
     cursor: pointer;
     display: inline-block;
-    background: #94c5cc;
+    background: #a1a6b4;
     border-radius: 15px;
     transition: transform 0.5s;
 }
 .button-solid:hover{
-    background: #a1a6b4;
+    background: #94c5cc;
     transform: translateY(-5px);
 }
 
 /* probability result */
 .probability-result {
     font-size: 18px;
-    color: #000100;
+    color: #a1a6b4;
     justify-content: center;
     padding-top: 25px;
     padding-bottom: 50px;
     text-align: center;
+}
+#probability-result-five{
+    color: #000100
 }
