--- a/style.css
+++ b/style.css
@@ -189,3 +189,27 @@ button-solid:focus {
 #probability-result-five{
     color: #000100
 }
+
+
+/************** EXTRA INFO **************/
+#pdf-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    margin: 0;
+}
+
+embed {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.title {
+    font-size: 30px;
+    color: #94c5cc;
+    justify-content: center;
+    padding-top: 45px;
+    text-align: center;
+}
+
