--- a/style.css
+++ b/style.css
@@ -212,4 +212,13 @@ embed {
     padding-top: 45px;
     text-align: center;
 }
-
+.img{
+    display: block;
+    width: 650px;
+    height: auto;
+    margin-top: 40px;
+    margin-bottom: 40px;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 15px;
+}
